# forcehub

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fix_agent_safe.py  forcehub_monaco_patch.py  requirements-dev.txt  requirements.txt  router.php
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/cpp/: build_windows.sh  forcehub_agent.cpp
agent/go/: go.mod
api/: auth.php  chat.php  config.php  files.php  models.php
app/: main.py  main.py.stable
backups/: main.py.agent-fix-bak-20260428-222757  main.py.monaco-bak-20260428-233308
cpp-forcehub/: CMakeLists.txt  setup_deps.sh
cpp-forcehub/src/: main.cpp
data/: chats.json
docs/: architecture.md  security-model.md  setup.md
public/: index.html
public/css/: style.css
public/js/: app.js
rust/forcehub-secscan/: Cargo.toml
rust/forcehub-secscan/src/: main.rs
scripts/: check_rust.sh  forcehub.sh  forcehub_agent_post.sh  forcehub_agents_list.sh
scripts/windows/: build-native-monitor-v2.ps1
static/js/: forcehub.js
tests/: test_agent_api.py  test_agents_dashboard.py  test_security.py
tools/native-monitor/: ForceHubLauncher.cs
tools/native-monitor-v2/: App.xaml  App.xaml.cs  ForceHubNativeMonitorV2.csproj  MainWindow.xaml  MainWindow.xaml.cs
tools/native-monitor-v2/scripts/: Kill-All-ForceHub.ps1  Start-AgentWatch.ps1  Start-ForceHubServer.ps1  Start-LocalIntegration.ps1  Stop-AgentWatch.ps1  Stop-ForceHubServer.ps1  Stop-LocalIntegration.ps1
(+1 files in other folders)
